src/objects/ADvendio__SiteRecommendation__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__RecommendedSite__c</fullName>
        <label>Recommended Site</label>
        <referenceTo>ADvendio__Site__c</referenceTo>
        <relationshipLabel>Site Recommendations</relationshipLabel>
        <relationshipName>SiteRecommendations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__TriggeringSite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Triggering Site</label>
        <referenceTo>ADvendio__Site__c</referenceTo>
        <relationshipLabel>Triggered Sites</relationshipLabel>
        <relationshipName>TriggeredSites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__ValidFrom__c</fullName>
        <label>Valid from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__ValidUntil__c</fullName>
        <label>Valid until</label>
        <type>Date</type>
    </fields>
    <label>Site Recommendation</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__RecommendedSite__c</columns>
        <columns>ADvendio__TriggeringSite__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Site Recommendation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Recommendations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>